# paulrjohnson.net

./: .Rprofile  .gitignore  .renvignore  404.qmd  CNAME  README.md  _publish.yml  _quarto.yml  _redirects  config.toml  config.yaml  config.yml  contact.qmd  go.mod  index.qmd  license.qmd  netlify.toml  package-lock.json  package.json  paulrjohnson.net.Rproj  pyproject.toml  theme.scss
.github/ISSUE_TEMPLATE/: blog-post-idea.md  bug_report.md  feature_request.md
.github/workflows/: publish.yml
_includes/: defer-js.html  performance-headers.html  preload-fonts.html
_resources/py_utils/: __init__.py  plot_theme.mplstyle  visualisation.py
_resources/r_utils/: visualisation.R
_site/: 404.html  _redirects  contact.html  index.html  license.html  listings.json  robots.txt  search.json  sitemap.xml
_site/blog/: index.html  index.xml
_site/consultancy/: index.html
_site/cv/: index.html
_site/projects/: index.html
archetypes/: default.md
assets/: _manualredirects  fonts.html  github-plus.theme  index.css  listing-default.css  paul-theme-light.scss  umami.html
assets/css/: cv.css  index.css  listing-default.css  theme.scss
blog/: _metadata.yml  index.qmd
blog/2020-04-14-football-analytics/: index.qmd
blog/2022-01-17-making-myself-accountable/: index.qmd
blog/2022-02-19-make-more-packages/: index.qmd
blog/2022-05-07-combining-tidymodels-and-caret/: index.qmd
consultancy/: index.qmd
content/about/: index.md
cv/: index.qmd
data/: projects.json
projects/: index.qmd
static/: _manualredirects.txt
styles/: github-plus.theme  theme.scss
(+122 files in other folders)
