[project]
name = "paulrjohnson-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.14.0",
    "ipykernel>=6.29.5",
    "jupyter-cache>=1.0.1",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "optuna-integration>=4.1.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "plotnine>=0.14.2",
    "scikit-learn>=1.5.2",
    "scikit-misc>=0.5.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "xgboost>=2.1.3",
]
